commit Group chat functionality